// Copyright (c) Improbable Worlds Ltd, All Rights Reserved
package unreal;
import "xCommond.proto";
// Defines an entity's actor set membership. Actor Sets are defined by specifying
// a leader entity; the Strategy Worker keeps all entities with the same leader entity
// in the same partition.
message ActorSetMember {
	enum ComponentID { id = CID_ActorSetMember; } 
	
	int64 leader_entity = 1;
}
