// Copyright (c) Improbable Worlds Ltd, All Rights Reserved
package unreal;
import "xCommond.proto";
message GameplayDebuggerComponent {
     enum ComponentID { id = CID_GameplayDebuggerComponent; } 
     uint32 delegated_virtual_worker_id = 1;
     bool track_player = 2;
}
