// Copyright (c) Improbable Worlds Ltd, All Rights Reserved
package unreal;
import "xCommond.proto";
// The NetOwningClientWorker component should be present on all entities
// representing Actors or subobjects which can have owning connections.
message NetOwningClientWorker {
    enum ComponentID { id = CID_NetOwningClientWorker; } 
    
    // The partition_entity_id is an optional entity ID string that is set
    // when the relevant Actor or subobject becomes net-owned by a client 
    // connection. This entity ID is the partition entity ID that the client 
    // worker claims in order to gain authority over entity components in the 
    // world. Currently, this will always be the PlayerController spawned during
    // the connection.
    optional int64 partition_entity_id = 1;
}