syntax = "proto2";
package unreal;

// Actor that is a part of the PersistentLevel or created with SpawnActor
message NotStreamed {
    optional uint32 id = 1[default = 9986];
}