syntax = "proto2";
package unreal;
import "xCommond.proto";
import "unreal/gdk/core_types.proto";
import "unreal/gdk/rpc_payload.proto";

message UnrealServerToServerCommandEndpoint {
    optional uint32 id = 1[default = 9973];
    message command_server_to_server_rpc_command
    {
        optional UnrealRPCPayload request = 1;
        optional Void response = 2;
    }
    message commands
    {
        optional command_server_to_server_rpc_command server_to_server_rpc_command = 1;
    }
}
 