// Copyright (c) Improbable Worlds Ltd, All Rights Reserved
package unreal;
import "xCommond.proto";
import "unreal/gdk/core_types.schema";
import "unreal/gdk/debug_metrics.schema";
import "unreal/gdk/spawner.schema";
import "unreal/generated/rpc_endpoints.schema";
import "improbable/standard_library.schema";

message ForwardSpawnPlayerRequest {
    SpawnPlayerRequest spawn_player_request = 1;
    UnrealObjectRef player_start = 2;
    int64 client_system_entity_id = 3;
}

message ForwardSpawnPlayerResponse {
    bool success = 1;
}

message ServerWorker {
    enum ComponentID { id = CID_ServerWorker; } 
    string worker_name = 1;
    bool ready_to_begin_play = 2;
    int64 server_system_entity_id = 3;
    //command ForwardSpawnPlayerResponse forward_spawn_player(ForwardSpawnPlayerRequest);
    rpc forward_spawn_player(ForwardSpawnPlayerRequest) returns ForwardSpawnPlayerResponse;
    //command Void exec_server_command(ExecServerCommandPayload);
    rpc exec_server_command(ExecServerCommandPayload) returns Void;
}

message ServerWorkerAuthComponentSet {
 
  enum ComponentSetID { id = CSID_ServerWorkerAuthComponentSet; }
  /* 
  components = [
    improbable.Position,
    improbable.Metadata,
    improbable.Interest,
    unreal.ServerWorker,
    unreal.generated.UnrealCrossServerSenderRPCs
  ];*/
  message components
  {
    improbable.Position Position = 1;
    improbable.Metadata Metadata = 2;
    improbable.Interest Interest = 3;
    unreal.ServerWorker ServerWorker = 4;
    unreal.generated.UnrealCrossServerSenderRPCs UnrealCrossServerSenderRPCs = 5;
  }
}
