// Copyright (c) Improbable Worlds Ltd, All Rights Reserved
package unreal;
import "xCommond.proto";
message Rotator {
    float pitch = 1;
    float yaw = 2;
    float roll = 3;
}

message Vector3f {
    float x = 1;
    float y = 2;
    float z = 3;
}

message SpawnData {
    // When Unreal replicates actors for the first time, it serializes their location, rotation,
    // scale, and velocity, regardless of whether the actor replicates movement. In our case,
    // location is represented by Spatial position, and this component contains the rest.
    enum ComponentID { id = CID_SpawnData; } 
    Vector3f location = 1;
    Rotator rotation = 2;
    Vector3f scale = 3;
    Vector3f velocity = 4;
}